# ClaudeMic

./: .gitignore  .mcp.json  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
commands/: mic-setup.md
hooks/: hooks.json
scripts/: ensure-running.sh  run-server.sh  setup-check.sh
skills/listen/: SKILL.md
src/claudemic/: __init__.py  cli.py  config.py  constants.py  core.py  daemon.py  notifier.py  recorder.py  server.py  transcriber.py  typer.py
