[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudemic"
version = "0.1.0"
description = "Voice-to-text input for Claude Code via hotkey + OpenAI Whisper"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pynput>=1.7",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "openai>=1.0",
]

[project.scripts]
claudemic = "claudemic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
