[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudemic"
version = "0.2.0"
description = "Voice-to-text MCP plugin for Claude Code using OpenAI Whisper"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "openai>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
